code adjustment to isdc

--- a/pushnotif/templates/pushnotif_report_notifications.html
+++ b/pushnotif/templates/pushnotif_report_notifications.html
@@ -1,4 +1,4 @@
-{% extends "v2/site_base.html" %} 
+{% extends "base.html" %} 
 {% load i18n %} 
 {% block title %} {% trans "Notifications List - Push Notifications Report" %} — {{ block.super }} {% endblock %} 
 {% block head %} {{ block.super }}
