--- a/pushnotif/templates/pushnotif_settings.html
+++ b/pushnotif/templates/pushnotif_settings.html
@@ -1,4 +1,4 @@
-{% extends "v2/site_base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 {% block title %} {% trans "Push Notification Settings" %} — {{ block.super }} {% endblock %}
